<resources>
    <string name="app_name">理德</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_username_hint">请输入姓名</string>
    <string name="login_password_hint">请输入你的密码</string>
    <string name="login_button_text">登陆</string>
    <string name="login_button_off_line">离线模式</string>
    <string name="NoRegister">免登录模式</string>
    <string name="iotlead">IotLead</string>
    <string name="menu">菜单</string>
    <string name="find">找商品</string>
    <string name="function">功能</string>
    <string name="isOpen">中心界面</string>
    <string name="isClose">菜单</string>
    <string name="check_task_name_hint">请输入任务编号</string>

</resources>
