<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/view_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="@dimen/login_avatar_width"
            android:layout_height="@dimen/login_avatar_height"
            android:layout_marginTop="@dimen/login_avatar_marginTog"
            android:src="@mipmap/logo_login1" />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_control_height"
            android:layout_marginTop="@dimen/login_account_marginTog"
            android:background="@drawable/edit_login"
            android:drawableLeft="@mipmap/account_login"
            android:drawablePadding="10dp"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#ffdddddd"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_control_height"
            android:layout_marginTop="@dimen/login_password_marginTog"
            android:background="@drawable/edit_login"
            android:drawableLeft="@mipmap/password_login"
            android:drawablePadding="10dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#ffdddddd"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|bottom">

            <CheckBox
                android:id="@+id/cb_login_isNeedRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-6dp"
                android:text="@string/NoRegister"
                android:textColor="@color/line_text_color" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginLeft="@dimen/login_button_margin"
            android:layout_marginRight="@dimen/login_button_margin"
            android:layout_marginTop="@dimen/login_button_marginTog"
            android:background="@drawable/button_login"
            android:text="@string/login_button_text"
            android:textColor="@drawable/button_login_text" />

        <Button
            android:id="@+id/btn_off_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginLeft="@dimen/login_button_margin"
            android:layout_marginRight="@dimen/login_button_margin"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_off_line"
            android:text="@string/login_button_off_line"
            android:textColor="@drawable/button_off_line_text" />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_login"
        style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_login_height"
        android:fitsSystemWindows="true"
        android:background="@color/bg_color_base"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登陆界面"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/toolbar_dropshadow"
        android:layout_below="@id/tb_login"/>


</RelativeLayout>

